--- a/arizonaproject/costs.html
+++ b/arizonaproject/costs.html
@@ -14,9 +14,10 @@
       <a href="project.html" class="bar-item col.2" onclick="scrollToTop()">Home</a>
       <a href="hotels.html" class="bar-item col.2" onclick="scrollToHotels()">Hotels</a>
       <a href="events.html" class="bar-item col.2" onclick="scrollToEvents()">Events</a>
+      <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Transport</a>
       <a href="schedule.html" class="bar-item col.2" onclick="scrollToSchedule()">Schedule</a>
-      <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Flights</a>
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
+      <a href="recommendations.html" class="bar-item col.2">Recommendations</a>
     </div>
   </div>
 <br>
@@ -24,12 +25,12 @@
   <p class="textheading">Costs</h1>
 </div>
 <div class="costs">
-  <div class="scheduletable row-padding" id="costs" align="center">
+  <div class="coststable row-padding" id="costs" align="center">
     <table class="padding costs">
       <tr>
         <th>Hotel Costs</th>
         <th>Activities Costs</th>
-        <th>Flights Cost</th>
+        <th>Transport Costs</th>
       </tr>
       <tr>
         <td>Rodeway Inn Downtown: $88 a night</td>
@@ -39,32 +40,36 @@
       <tr>
         <td>GreenTree Inn: $100 a night</td>
         <td>Antelope Canyon Tour and Horseshoe Bend: $220 a person</td>
+        <td>FOX SUV - $353 per week of rental. Gas was $27.</td>
       </tr>
       <tr>
         <td>Viscount Suite Hotel: $129 a night</td>
         <td>Apache Trail/Canyon Lake Steamboat Cruise: $150 a person</td>
+        <td></td>
       </tr>
       <tr>
         <td></td>
         <td>Camelback Mountain: FREE</td>
+        <td></td>
       </tr>
       <tr>
         <td></td>
         <td>Devil's Bridge Trail: FREE</td>
+        <td></td>
       </tr>
       <tr>
         <td></td>
         <td>Medera Canyon: FREE</td>
+        <td></td>
       </tr>
       <tr>
         <td></td>
         <td>Sabino Canyon: FREE</td>
+        <td></td>
       </tr>
     </table>
-
-</div>
-<div class="white footer" id="footer">
-  <p>Made by Hayden Carpenter</p>
+  <p>*An additional $237.99 was spent on food, souvenirs, and the unexpected.</p>
+  <a href="../images/budgetsheet.pdf" style="text-decoration: none; color: white; border: 0.1vw solid white; padding: 0vw 1vw;;">Click for the PDF of the budget sheet</a>
 </div>
 </body>
 </html>
