--- a/arizonaproject/events.html
+++ b/arizonaproject/events.html
@@ -15,9 +15,10 @@
       <a href="project.html" class="bar-item col.2" onclick="scrollToTop()">Home</a>
       <a href="hotels.html" class="bar-item col.2" onclick="scrollToHotels()">Hotels</a>
       <a href="events.html" class="bar-item col.2" onclick="scrollToEvents()">Events</a>
+      <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Transport</a>
       <a href="schedule.html" class="bar-item col.2" onclick="scrollToSchedule()">Schedule</a>
-      <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Flights</a>
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
+      <a href="recommendations.html" class="bar-item col.2">Recommendations</a>
     </div>
   </div>
   <br>
