--- a/arizonaproject/flights.html
+++ b/arizonaproject/flights.html
@@ -15,28 +15,39 @@
       <a href="project.html" class="bar-item col.2" onclick="scrollToTop()">Home</a>
       <a href="hotels.html" class="bar-item col.2" onclick="scrollToHotels()">Hotels</a>
       <a href="events.html" class="bar-item col.2" onclick="scrollToEvents()">Events</a>
+      <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Transport</a>
       <a href="schedule.html" class="bar-item col.2" onclick="scrollToSchedule()">Schedule</a>
-      <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Flights</a>
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
+      <a href="recommendations.html" class="bar-item col.2">Recommendations</a>
     </div>
   </div>
   <br>
 <!-- Flights -->
 <div class="headings flightsbackground">
-  <p class="textheading">Flights</h1>
+  <p class="textheading"> Transport </h1>
 </div>
 <div class="center padding-64 row-padding">
   <div class="quarter" id=flights>
-    <h2>Flights:</h2>
-    <p>This is some info about flights to Arizona. Woo. Flights.<p>
+    <h2>Transport:</h2>
+    <p>These are the methods of transport that I purchased for my trip. I purchased a roundtrip flight to go to Arizona and back, and I rented a car to drive to different cities and locations.<p>
   </div>
   <div class="quarter">
     <div class="w3-card">
-      <img class="" src="https://news.delta.com/file/27001/download?token=Tp_CotWd" style="width:100%">
+      <img class="card-img" src="https://news.delta.com/file/27001/download?token=Tp_CotWd" style="width:100%">
       <div class="w3-container padding">
         <h2>Delta Flight: ATL to PHX</h2>
         <p>Economy - Wifi, Charging, and Movies available.</p>
         <p>$281 per roundtrip</p>
+      </div>
+    </div>
+  </div>
+  <div class="quarter">
+    <div class="w3-card">
+      <img class="card-img" src="https://images.toyota-europe.com/gb/ya/width/1200/exterior-3.jpg" style="width:100%">
+      <div class="w3-container padding">
+        <h2>Car Rental</h2>
+        <p>SUV from FOX. Picked up and returned at PHX.</p>
+        <p>$353 per week. Gas was $27.</p>
       </div>
     </div>
   </div>
