--- a/arizonaproject/recommendations.html
+++ b/arizonaproject/recommendations.html
@@ -24,40 +24,40 @@
   <br class="topPageFix">
   <!-- Hotels -->
   <div class="headings hotelbackground">
-    <p class="textheading">Hotels</h1>
+    <p class="textheading2">Recommendations</h1>
   </div>
   <div class="center padding-64 row-padding">
     <div class="quarter w3-container" id=hotels>
-      <h2>Hotels:</h2>
-      <p>These are the hotels I stayed in while on my trip. They were all affordable and conventient with easy access.<p>
-    </div>
-    <div class="quarter">
-      <div class="w3-card">
-        <img class="card-img" src="https://t-ec.bstatic.com/images/hotel/max1024x768/170/170430394.jpg" style="width:100%">
-        <div class="w3-container padding">
-          <h2>Rodeway Inn Downtown Phoenix</h2>
-          <p>The Rodeway Inn features a King-sized room with two beds. It comes with free WiFi and breakfast. It is situated in the city and is a convienent location for accessing all of Pheonix.</p>
-          <p>$88 per night</p>
-        </div>
-      </div>
+      <h2>Recommendations:</h2>
+      <p>These are my recommendations for the locations and transport I've listed.<p>
     </div>
     <div class="quarter">
       <div class="w3-card">
         <img class="card-img" src="https://t-ec.bstatic.com/images/hotel/max1024x768/896/89691461.jpg" style="width:100%">
         <div class="w3-container padding">
           <h2>GreenTree Inn Sedona</h2>
-          <p>Located on Route 89A, the hotel is located within walking distance of many shops and restaurants as well as allowing access for many trails and canyons. The rooms have WiFi, and come with a free breakfast buffet. There is also an outdoor pool accompanied by a spa. The room is King sized and has two beds.</p>
+          <p>This hotel was the best in every way. It had an amazing view, easy access, and featured a copious amount of complementary items. Plus, it was extremely affordable.</p>
           <p>$100 per night</p>
         </div>
       </div>
     </div>
     <div class="quarter">
       <div class="w3-card">
-        <img class="card-img" src="https://t-ec.bstatic.com/images/hotel/max1024x768/163/16300846.jpg" style="width:100%">
+        <img class="card-img" src="http://www.ediblecommunities.com/sites/default/files/styles/ariticle_feartured_image_landscape/public/images/aggregator/phoenix%20arizona.jpg?itok=vDw3J-aS" style="width:100%">
         <div class="w3-container padding">
-          <h2>Viscount Suite Hotel</h2>
-          <p>The Deluxe Double Suite has two beds, a heated outdfoor pool, a full complementary breakfast, and free WiFi. It is also minutes from Downtown Tucson.</p>
-          <p>$129 per night</p>
+          <h2>Antelope Canyon Tour and Horseshoe Bend</h2>
+          <p>This full-day tour was one of the most memorable parts of my trip. The guides were nice, and took us through many inquisitive areas. I was even able to buy many souvenirs from the native people.</p>
+          <p>$220 per person</p>
+        </div>
+      </div>
+    </div>
+    <div class="quarter">
+      <div class="w3-card">
+        <img class="card-img" src="https://bloximages.newyork1.vip.townnews.com/azfamily.com/content/tncms/assets/v3/editorial/7/60/76069046-fa8f-58dc-87a9-973803f2195e/5bad5e313b403.image.jpg?resize=1200%2C675" style="width:100%">
+        <div class="w3-container padding">
+          <h2>Camelback Mounyain</h2>
+          <p>This was the most challenging part of the trip, but it was well worth it. The view was stunning, and offered a great challenge. It was free, but I would say it was a better experience than some of the paid trips on this list.</p>
+          <p>Hiking is free</p>
         </div>
       </div>
     </div>
