--- a/arizonaproject/schedule.html
+++ b/arizonaproject/schedule.html
@@ -14,9 +14,10 @@
       <a href="project.html" class="bar-item col.2" onclick="scrollToTop()">Home</a>
       <a href="hotels.html" class="bar-item col.2" onclick="scrollToHotels()">Hotels</a>
       <a href="events.html" class="bar-item col.2" onclick="scrollToEvents()">Events</a>
+      <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Transport</a>
       <a href="schedule.html" class="bar-item col.2" onclick="scrollToSchedule()">Schedule</a>
-      <a href="flights.html" class="bar-item col.2" onclick="scrollToFlights()">Flights</a>
       <a href="costs.html" class="bar-item col.2" onclick="scrollToCosts()">Costs</a>
+      <a href="recommendations.html" class="bar-item col.2">Recommendations</a>
     </div>
   </div>
 <div class="">
@@ -25,59 +26,71 @@
   <p class="textheading">Schedule</h1>
 </div>
     <div class="scheduletable row-padding" id="schedule" align="center">
-      <table class="padding schedule">
-        <tr>
-          <th>Day</th>
-          <th>Hotel</th>
-          <th>Activities</th>
-          <th>Cost</th>
-        </tr>
-        <tr>
-          <td>Monday</td>
-          <td>Hotel</td>
-          <td>Activities</td>
-          <td>$69.69</td>
-        </tr>
-        <tr>
-          <td>Tuesday</td>
-          <td>Hotel</td>
-          <td>Activities</td>
-          <td>$420.69</td>
-        </tr>
-        <tr>
-          <td>Wednesday</td>
-          <td>Hotel</td>
-          <td>Activities</td>
-          <td>$1337.00</td>
-        </tr>
-        <tr>
-          <td>Thursday</td>
-          <td>Hotel</td>
-          <td>Activities</td>
-          <td>An arm</td>
-        </tr>
-        <tr>
-          <td>Friday</td>
-          <td>Hotel</td>
-          <td>Activities</td>
-          <td>A leg</td>
-        </tr>
-        <tr>
-          <td>Saturday</td>
-          <td>Hotel</td>
-          <td>Activities</td>
-          <td>John F. Kennedy's Left Toenail</td>
-        </tr>
-        <tr>
-          <td>Sunday</td>
-          <td>Hotel</td>
-          <td>Activities</td>
-          <td>Yes</td>
-        </tr>
-      </table>
-    </div>
-    <div class="footer" id="footer">
-      <p>Made by Hayden Carpenter</p>
+      <h2>2/8</h2>
+<p>6:15 PM: Depart from ATL at 7:40 PM. Be at airport by 6:15 PM.</p>
+	<p>10:00 PM: Arrive in PHX.</p>
+	<p>Pick up car at airport.</p>
+	<p>Drive to and check into Rodeway Inn Downtown Phoenix.</p>
+<br>
+<h2>2/9</h2>
+<p>Breakfast – from lobby. Be ready to leave at 4:30 AM.</p>
+	<p>5 AM: Morning Hot Air Balloon Ride.</p>
+	<p>8:30 AM: Ride is over.</p>
+	<p>10:00 AM: After returning to the hotel, take a break for an hour before going to explore Phoenix.</p>
+	<p>1:00 PM: Eat lunch at closest place.</p>
+	<p>2:00 PM: Return to wandering.</p>
+	<p>6:00 PM: Eat dinner at nearest location.</p>
+	<p>7:30 PM: Return to hotel. Chill out and prepare for all-day activities.</p>
+<br>
+<h2>2/10</h2>
+<p>Breakfast – from lobby. Be ready to leave at 8:00 AM. Bring snack.</p>
+	<p>8 AM: Leave for Apache Trail/Canyon Lake Steamboat Cruise.</p>
+	<p>4:00-5:00 PM: Returned to hotel.</p>
+	<p>6:00 PM: Find a place to eat and eat there.</p>
+	<p>8:00 PM: Swim in hotel pool.</p>
+	<p>10:00 PM: Return to room.</p>
+<br>
+<h2>2/11</h2>
+<p>Breakfast – from lobby. Be ready to leave at 10:00 AM. Bring snack for lunch.</p>
+	<p>10 AM: Leave for Camelback Mountain.</p>
+	<p>4:00-5:00 PM: Return to hotel and gather stuff.</p>
+	<p>6:00 PM: Find a place to eat and get a quick snack.</p>
+	<p>6:30 PM: Drive to Sedona, Arizona and check into GreenTree Inn Sedona.</p>
+<br>
+<h2>2/12</h2>
+  <p>Breakfast – from lobby. Be ready to leave at 8:00 AM.</p>
+	<p>8:00 AM: Leave for Antelope Canyon Tour.</p>
+	<p>1:00 PM: Eat provided lunch.</p>
+	<p>8:00 PM: Returned to hotel.</p>
+	<p>8:00 PM: Buy something quick from the store.</p>
+	<p>10:00 PM: Return to room.</p>
+<br>
+<h2>2/13</h2>
+  <p>Breakfast – from lobby. Be ready to leave at 10:00 AM. Bring snack.</p>
+	<p>10:00 AM: Leave for Sedona-Devil’s Bridge Trail.</p>
+	<p>5:00 PM: Return to hotel and collect belongings.</p>
+	<p>6:30 PM: Get a quick bite after gathering things.</p>
+	<p>7:00 PM: Drive to Tucson and check into Viscount Suite Hotel.</p>
+<br>
+<h2>2/14</h2>
+  <p>Breakfast – from lobby. Be ready to leave at 10:00 AM. Bring snack.</p>
+	<p>10:00 AM: Leave for Madera Canyon.</p>
+	<p>5:00 PM: Return to hotel.</p>
+	<p>6:30 PM: Get something to eat at a restaurant.</p>
+	<p>8:00 PM: Explore Tucson for an hour.</p>
+	<p>9:00 PM: Return to hotel room.</p>
+<br>
+<h2>2/15</h2>
+  <p>Breakfast – from lobby. Be ready to leave at 10:00 AM.</p>
+	<p>10:00 AM: Leave for Sabino Canyon.</p>
+	<p>3:00 PM: Return to hotel and collect belongings.</p>
+	<p>3:30 PM: Get something to eat at a restaurant.</p>
+	<p>5:00 PM: Leave hotel and return to PHX.</p>
+	<p>6:15 PM: Return car.</p>
+	<p>6:30 PM: Be in airport.</p>
+	<p>7:40 PM: Leave for ATL.</p>
+	<p>10:00 PM: Arrive in ATL.</p>
+</p>
     </div>
 </div>
 </body>
