Edits to homepage

--- a/arizonaproject/project.html
+++ b/arizonaproject/project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
-<link rel="stylesheet" href="../css/homepage.css">
+<link rel="stylesheet" href="../css/projecthome.css">
 <script type="text/javascript" src="../js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../js/project.js"></script>
 
@@ -26,7 +26,26 @@
     <h1 class="travelp">Arizona</h1>
     <p>A website by Hayden Carpenter</p>
   </div>
+  <div class="textonhome">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Flag_of_Arizona.svg" style="height: 10vw; position: absolute;">
+    <div style="padding-left: 17.2vw;">
+      <h1>I recieved $3000 from Tumbleweed, the magical vacation fairy, to go to one of the following states:</h1>
+      <h2>Arizona, New Mexico, Oklahoma, and Texas.</h2>
+   </div>
+       <img src="https://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1477347433/south-rim-grand-canyon-arizona-AZNTNL1024.jpg?itok=4mRCwsTH" class="rightimages">
+    <br style="line-height: 2vw;">
+    <h2>I first went to Phoenix, then Sedona, and finally Tucson, </h2><h2>before heading back to Phoenix to catch my flight to Atlanta. </h2>
+    <h1>The trip will be from Febuary 8th to 15th.</h1>
+    <br style="line-height: 5vw;">
+    <center><h1 class="factheading">Some facts about Arizona!</h1></center>
+    <img src="https://www.dhresource.com/0x0s/f2-albu-g6-M00-63-94-rBVaR1tLRt2AY9uvAAKd8uCst6s276.jpg/handmade-western-cowboy-bola-tie-leather.jpg" class="rightimages">
+    <h1>1. The bola tie is the official state neckware</h1>
+    <br>
+    <h1>2. Arizona's most abundant mineral is copper.</h1>
+    <br>
+    <h1>3. The age of a saguaro cactus is determined by its height.</h1>
+  </div>
+  <br>
 </div>
-
 </body>
 </html>
