--- a/arizonaproject/flights.html
+++ b/arizonaproject/flights.html
@@ -27,9 +27,16 @@
   <p class="textheading"> Transport </h1>
 </div>
 <div class="center padding-64 row-padding">
-  <div class="quarter" id=flights>
+  <div class="quarter" id=flights style="width: 42%;">
     <h2>Transport:</h2>
     <p>These are the methods of transport that I purchased for my trip. I purchased a roundtrip flight to go to Arizona and back, and I rented a car to drive to different cities and locations.<p>
+    <p>Driving between Phoenix, Sedona, and Tucson, I totaled roughly 344 miles with an estimated 5 hour 37 minute drive time based on trafic data. The average gas price per gallon is $2.30 in big cities. The MPG of a Toyota Yaris is is 30 miles in cities and 37 in highways. Roughly estimating taking into account extra driving time for other acitivies gives you a rough total of $27 for gas.</p>
+    <p>Here are my assumptions for the math:</p>
+    <p>400 miles (With additional ~60 for other driving needs)</p>
+    <p>34 mpg.</p>
+  <p>11.7647058824 gallons needed.</p>
+  <p>About 2.30 a gallon</p>
+  <p>~$27 total</p>
   </div>
   <div class="quarter">
     <div class="w3-card">
