--- a/arizonaproject/schedule.html
+++ b/arizonaproject/schedule.html
@@ -39,8 +39,8 @@
 	<p>10:00 AM: After returning to the hotel, take a break for an hour before going to explore Phoenix.</p>
 	<p>1:00 PM: Eat lunch at closest place.</p>
 	<p>2:00 PM: Return to wandering.</p>
-	<p>6:00 PM: Eat dinner at nearest location.</p>
-	<p>7:30 PM: Return to hotel. Chill out and prepare for all-day activities.</p>
+	<p>6:00 PM: Eat at Rusconi's American Kitchen.</p>
+	<p>7:45 PM: Return to hotel. Chill out and prepare for all-day activities.</p>
 <br>
 <h2>2/10</h2>
 <p>Breakfast – from lobby. Be ready to leave at 8:00 AM. Bring snack.</p>
@@ -69,14 +69,14 @@
   <p>Breakfast – from lobby. Be ready to leave at 10:00 AM. Bring snack.</p>
 	<p>10:00 AM: Leave for Sedona-Devil’s Bridge Trail.</p>
 	<p>5:00 PM: Return to hotel and collect belongings.</p>
-	<p>6:30 PM: Get a quick bite after gathering things.</p>
-	<p>7:00 PM: Drive to Tucson and check into Viscount Suite Hotel.</p>
+	<p>6:00 PM: Eat at Picazzo's Healthy Italian Kitchen.</p>
+	<p>7:30 PM: Drive to Tucson and check into Viscount Suite Hotel.</p>
 <br>
 <h2>2/14</h2>
   <p>Breakfast – from lobby. Be ready to leave at 10:00 AM. Bring snack.</p>
 	<p>10:00 AM: Leave for Madera Canyon.</p>
 	<p>5:00 PM: Return to hotel.</p>
-	<p>6:30 PM: Get something to eat at a restaurant.</p>
+	<p>6:30 PM: Eat at Five Points Market & Restaurant.</p>
 	<p>8:00 PM: Explore Tucson for an hour.</p>
 	<p>9:00 PM: Return to hotel room.</p>
 <br>
