Hopefully final commit?

--- a/arizonaproject/project.html
+++ b/arizonaproject/project.html
@@ -22,18 +22,23 @@
       <a href="recommendations.html" class="bar-item col.2">Recommendations</a>
     </div>
   </div>
+  <div class="popup" onclick="popupMessage()">
+  <span class="popuptext" id="myPopup">Some images may take longer to load. I am not locally hosting every image.</span>
+</div>
+
   <div class="travellocation" id="">
     <p class="travelp">Arizona</p>
     <p>A website by Hayden Carpenter</p>
   </div>
+
   <div class="textonhome">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Flag_of_Arizona.svg" style="height: 10vw; position: absolute; padding-top: 1.5vw;">
+           <img src="https://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1477347433/south-rim-grand-canyon-arizona-AZNTNL1024.jpg?itok=4mRCwsTH" class="rightimages" style="margin-top: 7vw;">
     <div style="padding-left: 17.2vw;">
       <h1>I recieved $3000 from Tumbleweed, the magical vacation fairy, to go to one of the following states:</h1>
       <h2>Arizona, New Mexico, Oklahoma, or Texas.</h2>
       <h2>I chose to go to Arizona.</h2>
    </div>
-       <img src="https://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1477347433/south-rim-grand-canyon-arizona-AZNTNL1024.jpg?itok=4mRCwsTH" class="rightimages">
     <br style="line-height: 1vw;">
     <h2>As for cities in Arizona, I first went to Phoenix, then Sedona, and finally Tucson, before</p><p>heading back to Phoenix to catch my flight to Atlanta. </h2>
     <p style="font-size: 1.5vw;">My trip was from Febuary 8th to 15th. My full schedule is <a href="https://dev.dance/arizonaproject/schedule.html">here.</a>
