Hopefully this works

--- a/arizonaproject/project.html
+++ b/arizonaproject/project.html
@@ -28,7 +28,8 @@
 
   <div class="travellocation" id="">
     <p class="travelp">Arizona</p>
-    <p>A website by Hayden Carpenter</p>
+    <p style="margin-bottom: 0px;">A website by Hayden Carpenter</p>
+    <a href="https://github.com/xHayden/xHayden.github.io" target="_blank" style="color: white; font-size: 1.25vw;">Source Code</a>
   </div>
 
   <div class="textonhome">
