--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@ layout: default
   <title>Hayden's Bad Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class="homepagescrollfix">>
+<body class="homepagescrollfix">
   <div class="test">
   </div>
   <div class="homepage defaulttext" style="overflow:visible;">
-      <br style="line-height: 55px;">
+    <br>
     <h1 class="textonhome">a site for projects and stuff</h1>
   </div>
+  <br>
     <div class="homepage defaulttext">
+
     <a class="linkonhomepage" href="https://dev.dance/arizonaproject/project.html">click for arizona project</a>
     </div>
 </body>
