--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
   <link rel="stylesheet" href="css/homepage.css">
   <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-  <title>Hayden's Bad Website</title>
+  <title>A truely legitamate organization of great importance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="homepagescrollfix">
@@ -15,12 +15,10 @@ layout: default
   </div>
   <div class="homepage defaulttext" style="overflow:visible;">
     <br>
-    <h1 class="textonhome">a site for projects and stuff</h1>
+    <h1 class="textonhome">University of Dev.dance</h1>
   </div>
   <br>
     <div class="homepage defaulttext">
-
-    <a class="linkonhomepage" href="https://dev.dance/arizonaproject/project.html">click for arizona project</a>
     </div>
 </body>
 </html>
