making the site useful

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <link href="https://fonts.googleapis.com/css?family=Courgette|Noto+Serif|Oswald" rel="stylesheet">
   <link rel="stylesheet" href="css/homepage.css">
   <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-  <title>A truely legitamate organization of great importance</title>
+  <title>dev.dance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="homepagescrollfix">
@@ -15,7 +15,20 @@ layout: default
   </div>
   <div class="homepage defaulttext" style="overflow:visible;">
     <br>
-    <h1 class="textonhome">University of Dev.dance</h1>
+    <h1 class="textonhome">A Bad Website by Hayden Carpenter</h1>
+	<p>At least it isn't Squarespace</p>
+	<br>
+	<div id="links">
+		<a href="https://phishing.fish" target="_blank">Cybersecurity Club/Projects</a>
+		<br>
+		<a href="https://github.com/xHayden" target="_blank">Github</a>
+		<br>
+		<a href="https://decaturrobotics.org/frc/" target="_blank">Decatur Robotics</a>
+		<br>
+	</div>
+	<div id="email">
+		<a href = "mailto: hayden@dev.dance">hayden@dev.dance</a>
+	</div>
   </div>
   <br>
     <div class="homepage defaulttext">
