--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <th><a href="#Karten">Karten<br><img src="images/icons/icons8-react-100.png"><img src="images/icons/icons8-javascript-100.png"></a></th>
         </tr>
         <tr>
+            <th><a href="#Portfolio">Portfolio<br><img src="images/icons/icons8-javascript-100.png"></a></th>
+        </tr>
+        <tr>
             <th><a href="#Contact">Contact<br></a></th>
         </tr>
     </table>
@@ -75,6 +78,23 @@
     <p>Karten is a tool built in React to quickly create <br>flashcards for foreign languages.</p>
     <p>Karten supports any languge supplied by the Yandex API<br> and is able to convert to Quizlet Study Sets.</p>
     <div class="arrow" style="top:370%">
+        <a href="#Portfolio">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+    </div>
+</div>
+<div class="section" id="Portfolio">
+    <a class="link" href="https://dev.dance"><h1 class="section-heading">Portfolio</h1></a>
+    <div style="text-align: left; font-size: 2vw;">
+        <p>var <span class="emphasize">portfolio</span> = () => {</p>
+        <p class="indent">return <span class="emphasize">this</span>;</p>
+        <p>};</p>
+        <p style="color: green">//I'll show myself out</p>
+    </div>
+
+    <div class="arrow" style="top:470%">
         <a href="#Contact">
             <span></span>
             <span></span>
