Portfolio section changes, karten image

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <p>Scout Janssen is a Robot Scouting Tool built for <br>the FIRST Robotics Competition (FRC).</p>
     <p>The project is built primarily with Django and Node.js.</p>
     <a href="https://frc4026.com" target="_blank" id="visit-FRC">Visit frc4026.com.</a>
+    
     <div class="arrow" style="top:170%">
         <a href="#MidiToEarsketch">
             <span></span>
@@ -77,6 +78,7 @@
     <a class="link" target="_blank" href="https://github.com/xHayden/MidiToEarsketch"><h1 class="section-heading">Karten</h1></a>
     <p>Karten is a tool built in React to quickly create <br>flashcards for foreign languages.</p>
     <p>Karten supports any languge supplied by the Yandex API<br> and is able to convert to Quizlet Study Sets.</p>
+    <img src="images/karten.png" style="width: 20vw; height: 20vw;">
     <div class="arrow" style="top:370%">
         <a href="#Portfolio">
             <span></span>
@@ -87,11 +89,13 @@
 </div>
 <div class="section" id="Portfolio">
     <a class="link" href="https://dev.dance"><h1 class="section-heading">Portfolio</h1></a>
-    <div style="text-align: left; font-size: 2vw;">
-        <p>var <span class="emphasize">portfolio</span> = () => {</p>
-        <p class="indent">return <span class="emphasize">this</span>;</p>
-        <p>};</p>
-        <p style="color: green">//I'll show myself out</p>
+    <div id="portfolio-container">
+        <div id="portfolio-joke">
+            <p><span class="blue">var</span> <span class="emphasize">portfolio</span> = () <span class="blue">=></span> {</p>
+            <p class="indent"><span class="purple">return</span> <span class="blue">this</span>;</p>
+            <p>};</p>
+            <p style="color: green">//I'll show myself out</p>
+        </div>
     </div>
 
     <div class="arrow" style="top:470%">
