--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <nav class="nav">
     <table>
         <tr>
+            <th><a href="#Title">Home<br></a></th>
+        </tr>
+        <tr>
             <th><a href="#ScoutJanssen">Scout Janssen<br><img src="images/icons/icons8-django-100.png"><img src="images/icons/icons8-python-100.png"><img src="images/icons/icons8-javascript-100.png"></a></th>
             
         </tr>
@@ -31,7 +34,7 @@
     </table>
 </nav>
 
-<div class="main-section" id="title">
+<div class="main-section" id="Title">
     <div>
         <p class="big-text-main">Stuff by <span class="big-text-main emphasize" id="me-name">Hayden Carpenter</span></p>
     </div>
@@ -47,7 +50,8 @@
     <a class="link" target="_blank" href="https://github.com/VeryCleverName3/Scout-Janssen/tree/django-rewrite"><h1 class="section-heading">Scout Janssen</h1></a>
     <p>Scout Janssen is a Robot Scouting Tool built for <br>the FIRST Robotics Competition (FRC).</p>
     <p>The project is built primarily with Django and Node.js.</p>
-    <a href="https://frc4026.com" target="_blank" id="visit-FRC">Visit frc4026.com.</a>
+    <a href="https://frc4026.com" target="_blank" id="visit-FRC">Visit frc4026.com.</a><br>
+    <img src="images/duck.png" id="duck">
     
     <div class="arrow" style="top:170%">
         <a href="#MidiToEarsketch">
