--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Portfolio | Hayden Carpenter</title>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
     <link rel="stylesheet" type="text/css" href="css/portfolio.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/portfolio.js"></script>
@@ -50,7 +51,7 @@
     <a class="link" target="_blank" href="https://github.com/VeryCleverName3/Scout-Janssen/tree/django-rewrite"><h1 class="section-heading">Scout Janssen</h1></a>
     <p>Scout Janssen is a Robot Scouting Tool built for <br>the FIRST Robotics Competition (FRC).</p>
     <p>The project is built primarily with Django and Node.js.</p>
-    <a href="https://frc4026.com" target="_blank" id="visit-FRC">Visit frc4026.com.</a><br>
+    <a href="https://frc4026.com" target="_blank" id="visit-FRC" class="link">Visit frc4026.com.</a><br>
     <img src="images/duck.png" id="duck">
     
     <div class="arrow" style="top:170%">
@@ -113,9 +114,9 @@
 <div class="section" id="Contact">
     <a class="link" target="_blank" href=""><h1 class="section-heading">Contact</h1></a>
     <div id="contact-div">
-        <p>Contact me at <a target="_blank" href="mailto:93haydcarp@csdecatur.net">93haydcarp@csdecatur.net</p>
-        <a target="_blank" href="https://www.instagram.com/hayden.carpenter/"><img src="images/icons/icons8-instagram-100.png" width="10%"></a>
-        <a target="_blank" href="https://www.github.com/xhayden/"><img src="images/icons/icons8-github-100.png" width="10%"></a>
+        <p>Contact me at <a class="link" target="_blank" href="mailto:93haydcarp@csdecatur.net">93haydcarp@csdecatur.net</p>
+        <a target="_blank" class="link" href="https://www.instagram.com/hayden.carpenter/"><img src="images/icons/icons8-instagram-100.png"></a>
+        <a target="_blank" class="link" href="https://www.github.com/xhayden/"><img src="images/icons/icons8-github-100.png"></a>
     </div>
 </div>
 
