--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <th><a href="#Karten">Karten<br><img src="images/icons/icons8-react-100.png"><img src="images/icons/icons8-javascript-100.png"></a></th>
         </tr>
         <tr>
+            <th><a href="#Twitch">Twitch Checker<br><img src="images/icons/icons8-python-100.png">
+        </tr>
+        <tr>
             <th><a href="#Portfolio">Portfolio<br><img src="images/icons/icons8-javascript-100.png"></a></th>
         </tr>
         <tr>
@@ -80,11 +83,25 @@
 </div>
 
 <div class="section" id="Karten">
-    <a class="link" target="_blank" href="https://github.com/xHayden/MidiToEarsketch"><h1 class="section-heading">Karten</h1></a>
+    <a class="link" target="_blank" href=""><h1 class="section-heading">Karten</h1></a>
     <p>Karten is a tool built in React to quickly create <br>flashcards for foreign languages.</p>
     <p>Karten supports any languge supplied by the Yandex API<br> and is able to convert to Quizlet Study Sets.</p>
     <img src="images/karten.png" style="width: 20vw; height: 20vw;">
     <div class="arrow" style="top:370%">
+        <a href="#Twitch">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+    </div>
+</div>
+
+<div class="section" id="Twitch">
+    <a class="link" target="_blank" href=""><h1 class="section-heading">Twitch Checker</h1></a>
+    <p>The Asynchronous Twitch Username checker is capable of checking <br>thousands of Twitch usernames in record times, giving <br>you the ability to get the best usernames possible.</p>
+    <p>Twitch does not publicly show when usernames will become available, <br>so such as system is necessary to get the username you want.</p>
+    <p>The project is currently closed source, however the project will <br>eventually be transformed into a fully featured website.</p>
+    <div class="arrow" style="top:470%">
         <a href="#Portfolio">
             <span></span>
             <span></span>
@@ -92,6 +109,7 @@
         </a>
     </div>
 </div>
+
 <div class="section" id="Portfolio">
     <a class="link" href="https://dev.dance"><h1 class="section-heading">Portfolio</h1></a>
     <div id="portfolio-container">
@@ -103,7 +121,7 @@
         </div>
     </div>
 
-    <div class="arrow" style="top:470%">
+    <div class="arrow" style="top:570%">
         <a href="#Contact">
             <span></span>
             <span></span>
