added 4026 bot gif

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p>Scout Janssen is a Robot Scouting Tool built for <br>the FIRST Robotics Competition (FRC).</p>
     <p>The project is built primarily with Django and Node.js.</p>
     <a href="https://frc4026.com" target="_blank" id="visit-FRC" class="link">Visit frc4026.com.</a><br>
-    <img src="images/duck.png" id="duck">
+    <img src="images/4026.gif" id="flipgif">
     
     <div class="arrow" style="top:170%">
         <a href="#MidiToEarsketch">
