--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     Karten is a flashcard creation tool that uses language APIs to allow you to speed up flashcard creation for foreign language learning. Karten is built using React.
     <a href="https://github.com/xHayden/Karten" target="_blank">Karten source</a>-->
     <div class="footer">
-        <p>Built by Hayden Carpenter | <a href="https://github.com/xHayden/" target="_blank">GitHub</a> | <a href="mailto:me@hayden.gg" target="_blank">Contact</a> | <a href="https://hayden.gg/old-portfolio" target="_blank">Old Portfolio</a></p>
+        <p>Built by Hayden Carpenter | <a href="https://github.com/xHayden/" target="_blank">GitHub</a> | <a href="mailto:me@hayden.gg" target="_blank">Contact</a> | <a href="https://hayden.gg/old-portfolio/" target="_blank">Old Portfolio</a></p>
     </div>
 </body>
 </html>
