About me much needed update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 
             </ul>
             <ul id="nav-right">
-                <li>Portfolio | 2020</li>
+                <li>Portfolio | 2021</li>
             </ul>
         </div>
     </nav>
@@ -48,13 +48,82 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-container">
+            <div class="section-container about-me">
                 <h1>About Me</h1>
                 <hr style="border: 1px solid rgb(189, 247, 255);">
-                <div>
+                <div style="margin-top: 30px; font-size: 1.2rem;">
                     <p>I'm a student at Decatur High School. I like making cool projects and need ideas.</p>
-                    <p>Unfortunately, I've ended up doing a bunch of web design.</p>
-                    <p></p>
+                    <h3 style="text-align: center;">Experience</h3>
+                    <div class="about-me-table-container">
+                        <table>
+                            <tr>
+                                <th>Languages</th>
+                                <th>Proficiency</th>
+                            </tr>
+                            <tr>
+                                <td>Javascript</td>
+                                <td>Proficient</td>
+                            </tr>
+                            <tr>
+                                <td>Python</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>Typescript</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>Java</td>
+                                <td>Beginner</td>
+                            </tr>
+                            <tr>
+                                <td>C#</td>
+                                <td>Beginner</td>
+                            </tr>
+                            <tr>
+                                <td>C++</td>
+                                <td>Beginner</td>
+                            </tr>
+                        </table>
+                        <table>
+                            <tr>
+                                <th>Framework</th>
+                                <th>Proficiency</th>
+                            </tr>
+                            <tr>
+                                <td>Django</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>Gatsby.js</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>Express</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>Next.js</td>
+                                <td>Beginner</td>
+                            </tr>
+                        </table>
+                        <table>
+                            <tr>
+                                <th>Other</th>
+                                <th>Proficiency</th>
+                            </tr>
+                            <tr>
+                                <td>React</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>Node.js</td>
+                                <td>Intermediate</td>
+                            </tr>
+                        </table>
+                    </div>
+                    
+                    <p>I'm currently working on a website redesign for <a href="https://gafirst.org">Georgia FIRST</a>, running <a href="https://codedecatur.org">Code Decatur</a>, and working on other unannounced projects.</p>
                     <canvas id="experience-chart" width="400" height="100"></canvas>
                 </div>
             </div>
@@ -71,7 +140,7 @@
                             Code Decatur is a coding organization primarily based out of Decatur High School. We teach students how to code and provide an environment in which they can work to create cool projects.
                         </p>
                         <div>
-                            <p>> React.js and Gatsby.js backend</p>
+                            <p>> React.js + Gatsby.js + Netlify CMS</p>
                             <p><a href="https://codedecatur.org">codedecatur.org</a></p>
                         </div>
                     </div>
@@ -81,7 +150,7 @@
                             Scout Janssen is a FRC Scouting tool that allows teams to properly obtain data on other teams during matches and produces models based on said data.
                         </p>
                         <div>
-                            <p>> Django and Node.js backend</p>
+                            <p>> Django + Node.js</p>
                             <p><a href="https://frc4026.com">frc4026.com</a></p>
                         </div>
                     </div>
